# apitap

./: .gitignore  APITAP_ROADMAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  OPTIMIZATIONS_APPLIED.md  README.md  SECURITY.md  log.txt  pipelines.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
docs/: EXECUTION_GUIDE.md  FETCHER_GUIDE.md  OPTIMIZATIONS_APPLIED.md  OPTIMIZATION_REPORT.md  PRODUCTION_READINESS_REPORT.md  README.md  RUST_LEARNING_GUIDE.md  STREAMING_ARCHITECTURE.md  TABLE_PROVIDER_GUIDE.md
examples/config/: pipelines.yaml
examples/sql/: example.sql  testing_2.sql
output/: users.json  users_page_1.json  users_page_10.json  users_page_11.json  users_page_12.json  users_page_13.json  users_page_14.json  users_page_15.json  users_page_16.json  users_page_17.json  users_page_2.json  users_page_3.json  users_page_4.json  users_page_5.json  users_page_6.json  users_page_7.json  users_page_8.json  users_page_9.json
output2/: user2.json  user2_page_1.json  user2_page_10.json  user2_page_11.json  user2_page_12.json  user2_page_13.json  user2_page_14.json  user2_page_15.json  user2_page_16.json  user2_page_17.json  user2_page_2.json  user2_page_3.json  user2_page_4.json  user2_page_5.json  user2_page_6.json  user2_page_7.json  user2_page_8.json  user2_page_9.json
src/: lib.rs  main.rs
src/cmd/: mod.rs
src/config/: mod.rs  templating.rs  tests.rs
src/errors/: mod.rs
src/http/: fetcher.rs  mod.rs
tests/: integration_tests.rs  lib.rs
(+33 files in other folders)
