[package]
name = "apitap"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "47.0.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3"
url = "2.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","blocking","stream"] } # For making HTTP requests and handling JSON
anyhow = "1.0.93"
serde_yaml = "0.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1"
async-stream = "0.3"
tempfile = "3"
base64 = "0.22.1"
tokio-stream = "0.1"
serde_arrow = { version = "0.13.3", features = ["arrow-55"] }
dotenvy = "0.15"
tokio-util = "0.7.16"
minijinja = "2.12.0"
walkdir = "2.5.0"

